--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
           </li>
@@ -45,11 +44,15 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">About</a>
           </li>
+        </ul>
       </div>
     </nav>
 
     <div class="container">
-      <header><h2 class="text-info">About Me!</h2></header>
+      <header>
+        <h2 class="text-info mt-3">About Me!</h2>
+      </header>
+      <hr />
       <img
         src="img/pic3.png"
         class="float-left p-2"
@@ -83,6 +86,10 @@
         asperiores ab temporibus? Dicta tempore accusamus voluptas eveniet
         minus.
       </p>
+
+      <footer class="fixed-bottom bg-dark text-center text-light">
+        © Copyright
+      </footer>
     </div>
 
     <!-- Optional JavaScript -->
