--- a/index.html
+++ b/index.html
@@ -20,80 +20,94 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Lindy E. Merwin</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Portfolio</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">About</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <div class="container">
-      <header>
-        <h2 class="text-info mt-3">About Me!</h2>
-      </header>
-      <hr />
-      <img
-        src="img/pic3.png"
-        class="float-left p-2"
-        alt="Profile Pic"
-        width="300"
-      />
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis fuga
-        optio fugiat provident sequi suscipit, pariatur ad molestias voluptatum
-        accusamus, voluptas repudiandae! Laborum in amet minus nostrum, tenetur
-        numquam reiciendis. Lorem ipsum dolor sit amet consectetur adipisicing
-        elit. Facere ipsum dolorem ea repellendus debitis quidem, odio minima
-        numquam, eveniet, quibusdam vitae amet cumque quam et rerum expedita
-        libero sit vero? Lorem ipsum, dolor sit amet consectetur adipisicing
-        elit. Rem eius, totam quae sunt illo corporis facere vitae distinctio
-        officia non doloremque unde natus nisi amet nesciunt obcaecati? Optio,
-        corporis culpa.
-      </p>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-        obcaecati velit repudiandae consequatur quod cumque quae ratione quidem
-        placeat praesentium inventore exercitationem itaque magni quis dicta ex
-        repellendus, ducimus omnis. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Quibusdam blanditiis laboriosam error nostrum quia
-        cumque nulla fugiat expedita aspernatur veritatis! Eveniet qui error
-        quis magnam, quos minus ipsum! Accusamus, voluptates.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id eos, libero
-        quas aperiam, officia deserunt laborum eum quis explicabo placeat ad
-        asperiores ab temporibus? Dicta tempore accusamus voluptas eveniet
-        minus.
-      </p>
-
-      <footer class="fixed-bottom bg-dark text-center text-light">
-        © Copyright
-      </footer>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Lindy E. Merwin</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">About</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <div
+      class="view"
+      style="
+        background-image: url('https://image.freepik.com/vector-gratis/particula-tecnologia-abstracta-realista-fondo_23-2148431735.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+      "
+    >
+      <main class="container">
+        <div class="card border-0 shadow my-">
+          <h2 class="text-info mt-3">About Me!</h2>
+          <hr />
+          <img
+            src="img/pic3.png"
+            class="float-left"
+            alt="Profile Pic"
+            width="300"
+          />
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
+            fuga optio fugiat provident sequi suscipit, pariatur ad molestias
+            voluptatum accusamus, voluptas repudiandae! Laborum in amet minus
+            nostrum, tenetur numquam reiciendis. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Facere ipsum dolorem ea repellendus
+            debitis quidem, odio minima numquam, eveniet, quibusdam vitae amet
+            cumque quam et rerum expedita libero sit vero? Lorem ipsum, dolor
+            sit amet consectetur adipisicing elit. Rem eius, totam quae sunt
+            illo corporis facere vitae distinctio officia non doloremque unde
+            natus nisi amet nesciunt obcaecati? Optio, corporis culpa.
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+            obcaecati velit repudiandae consequatur quod cumque quae ratione
+            quidem placeat praesentium inventore exercitationem itaque magni
+            quis dicta ex repellendus, ducimus omnis. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Quibusdam blanditiis laboriosam error
+            nostrum quia cumque nulla fugiat expedita aspernatur veritatis!
+            Eveniet qui error quis magnam, quos minus ipsum! Accusamus,
+            voluptates.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id eos,
+            libero quas aperiam, officia deserunt laborum eum quis explicabo
+            placeat ad asperiores ab temporibus? Dicta tempore accusamus
+            voluptas eveniet minus.
+          </p>
+        </div>
+      </main>
     </div>
 
+    <footer class="fixed-bottom">
+      <div class="bg-info" style="height: 10px;"></div>
+      <div class="bg-dark text-center text-light p-3">
+        © Copyright
+      </div>
+    </footer>
+
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
