Background 2 and margins

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
     <title>Lindy E. Merwin</title>
   </head>
 
-  <body>
+  <body 
+  style="
+  background-image: url('./img/silhouette-of-grass-under-white-sky-925743.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;"
+  >
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Lindy E. Merwin</a>
@@ -49,56 +55,47 @@
         </div>
       </nav>
     </header>
-    <div
-      class="view"
-      style="
-        background-image: url('https://image.freepik.com/vector-gratis/particula-tecnologia-abstracta-realista-fondo_23-2148431735.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-      "
-    >
-      <main class="container">
-        <div class="card border-0 shadow my-">
-          <h2 class="text-info mt-3">About Me!</h2>
-          <hr />
-          <img
-            src="img/pic3.png"
-            class="float-left"
-            alt="Profile Pic"
-            width="300"
-          />
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-            fuga optio fugiat provident sequi suscipit, pariatur ad molestias
-            voluptatum accusamus, voluptas repudiandae! Laborum in amet minus
-            nostrum, tenetur numquam reiciendis. Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Facere ipsum dolorem ea repellendus
-            debitis quidem, odio minima numquam, eveniet, quibusdam vitae amet
-            cumque quam et rerum expedita libero sit vero? Lorem ipsum, dolor
-            sit amet consectetur adipisicing elit. Rem eius, totam quae sunt
-            illo corporis facere vitae distinctio officia non doloremque unde
-            natus nisi amet nesciunt obcaecati? Optio, corporis culpa.
-          </p>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-            obcaecati velit repudiandae consequatur quod cumque quae ratione
-            quidem placeat praesentium inventore exercitationem itaque magni
-            quis dicta ex repellendus, ducimus omnis. Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Quibusdam blanditiis laboriosam error
-            nostrum quia cumque nulla fugiat expedita aspernatur veritatis!
-            Eveniet qui error quis magnam, quos minus ipsum! Accusamus,
-            voluptates.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id eos,
-            libero quas aperiam, officia deserunt laborum eum quis explicabo
-            placeat ad asperiores ab temporibus? Dicta tempore accusamus
-            voluptas eveniet minus.
-          </p>
-        </div>
-      </main>
-    </div>
+
+    <main class="container">
+      <div class="card-body bg-white mt-3">
+        <h2 class="text-info mt-3">About Me!</h2>
+        <hr />
+        <img
+          src="img/pic3.png"
+          class="float-left p-3"
+          alt="Profile Pic"
+          width="300"
+        />
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
+          fuga optio fugiat provident sequi suscipit, pariatur ad molestias
+          voluptatum accusamus, voluptas repudiandae! Laborum in amet minus
+          nostrum, tenetur numquam reiciendis. Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Facere ipsum dolorem ea repellendus
+          debitis quidem, odio minima numquam, eveniet, quibusdam vitae amet
+          cumque quam et rerum expedita libero sit vero? Lorem ipsum, dolor
+          sit amet consectetur adipisicing elit. Rem eius, totam quae sunt
+          illo corporis facere vitae distinctio officia non doloremque unde
+          natus nisi amet nesciunt obcaecati? Optio, corporis culpa.
+        </p>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+          obcaecati velit repudiandae consequatur quod cumque quae ratione
+          quidem placeat praesentium inventore exercitationem itaque magni
+          quis dicta ex repellendus, ducimus omnis. Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Quibusdam blanditiis laboriosam error
+          nostrum quia cumque nulla fugiat expedita aspernatur veritatis!
+          Eveniet qui error quis magnam, quos minus ipsum! Accusamus,
+          voluptates.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id eos,
+          libero quas aperiam, officia deserunt laborum eum quis explicabo
+          placeat ad asperiores ab temporibus? Dicta tempore accusamus
+          voluptas eveniet minus.
+        </p>
+      </div>
+    </main>
 
     <footer class="fixed-bottom">
       <div class="bg-info" style="height: 10px;"></div>
