--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     <title>Lindy E. Merwin</title>
   </head>
 
-  <body 
-  style="
-  background-image: url('./img/silhouette-of-grass-under-white-sky-925743.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;"
+  <body
+    style="
+      background-image: url('./img/silhouette-of-grass-under-white-sky-925743.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+    "
   >
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -43,13 +44,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="./contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="./index.html">About</a>
             </li>
           </ul>
         </div>
@@ -67,22 +68,22 @@
           width="300"
         />
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-          fuga optio fugiat provident sequi suscipit, pariatur ad molestias
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis fuga
+          optio fugiat provident sequi suscipit, pariatur ad molestias
           voluptatum accusamus, voluptas repudiandae! Laborum in amet minus
           nostrum, tenetur numquam reiciendis. Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Facere ipsum dolorem ea repellendus
           debitis quidem, odio minima numquam, eveniet, quibusdam vitae amet
-          cumque quam et rerum expedita libero sit vero? Lorem ipsum, dolor
-          sit amet consectetur adipisicing elit. Rem eius, totam quae sunt
-          illo corporis facere vitae distinctio officia non doloremque unde
-          natus nisi amet nesciunt obcaecati? Optio, corporis culpa.
+          cumque quam et rerum expedita libero sit vero? Lorem ipsum, dolor sit
+          amet consectetur adipisicing elit. Rem eius, totam quae sunt illo
+          corporis facere vitae distinctio officia non doloremque unde natus
+          nisi amet nesciunt obcaecati? Optio, corporis culpa.
         </p>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
           obcaecati velit repudiandae consequatur quod cumque quae ratione
-          quidem placeat praesentium inventore exercitationem itaque magni
-          quis dicta ex repellendus, ducimus omnis. Lorem ipsum dolor sit amet
+          quidem placeat praesentium inventore exercitationem itaque magni quis
+          dicta ex repellendus, ducimus omnis. Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Quibusdam blanditiis laboriosam error
           nostrum quia cumque nulla fugiat expedita aspernatur veritatis!
           Eveniet qui error quis magnam, quos minus ipsum! Accusamus,
@@ -91,14 +92,14 @@
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id eos,
           libero quas aperiam, officia deserunt laborum eum quis explicabo
-          placeat ad asperiores ab temporibus? Dicta tempore accusamus
-          voluptas eveniet minus.
+          placeat ad asperiores ab temporibus? Dicta tempore accusamus voluptas
+          eveniet minus.
         </p>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id eos,
           libero quas aperiam, officia deserunt laborum eum quis explicabo
-          placeat ad asperiores ab temporibus? Dicta tempore accusamus
-          voluptas eveniet minus.
+          placeat ad asperiores ab temporibus? Dicta tempore accusamus voluptas
+          eveniet minus.
         </p>
       </div>
     </main>
