--- a/contact.html
+++ b/contact.html
@@ -44,13 +44,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Contact</a>
+              <a class="nav-link active" href="./contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="./index.html">About</a>
             </li>
           </ul>
         </div>
@@ -82,7 +82,12 @@
           </div>
           <div class="form-group">
             <label for="message">Message</label>
-            <textarea class="form-control" id="message" rows="3"></textarea>
+            <textarea
+              class="form-control"
+              id="message"
+              placeholder="Message"
+              rows="3"
+            ></textarea>
           </div>
           <button type="submit" class="btn btn-info mb-2">Submit</button>
         </form>
