--- a/portfolio.html
+++ b/portfolio.html
@@ -1,22 +1,110 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
 
-    <title>Hello, world!</title>
+    <title>Lindy E. Merwin</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <body
+    style="
+      background-image: url('./img/silhouette-of-grass-under-white-sky-925743.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+    "
+  >
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Lindy E. Merwin</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <main class="container">
+      <div class="card-body bg-white mt-3 mb-5">
+        <h2 class="text-info mt-3">Portfolio</h2>
+        <hr />
+        <div>
+          <img
+            src="https://picsum.photos/350"
+            class="rounded img-thumbnail"
+            alt="placeholder"
+          />
+          <img
+            src="https://picsum.photos/350"
+            class="rounded img-thumbnail"
+            alt="placeholder"
+          />
+        </div>
+        <div>
+        <img
+          src="https://picsum.photos/350"
+          class="rounded img-thumbnail"
+          alt="placeholder"
+        />
+        <img
+          src="https://picsum.photos/350"
+          class="rounded img-thumbnail"
+          alt="placeholder"
+        />
+        </div>
+        <div>
+          <img
+            src="https://picsum.photos/350"
+            class="rounded img-thumbnail"
+            alt="placeholder"
+          />
+          <img
+            src="https://picsum.photos/350"
+            class="rounded img-thumbnail"
+            alt="placeholder"
+          />
+        </div>
+      </div>
+    </main>
+
+    <footer class="fixed-bottom">
+      <div class="bg-info" style="height: 10px;"></div>
+      <div class="bg-dark text-center text-light p-3">
+        © Copyright
+      </div>
+    </footer>
   </body>
 </html>
