--- a/portfolio.html
+++ b/portfolio.html
@@ -61,41 +61,43 @@
       <div class="card-body bg-white mt-3 mb-5">
         <h2 class="text-info mt-3">Portfolio</h2>
         <hr />
-        <div>
-          <img
-            src="https://picsum.photos/350"
-            class="rounded img-thumbnail"
-            alt="placeholder"
-          />
-          <img
-            src="https://picsum.photos/350"
-            class="rounded img-thumbnail"
-            alt="placeholder"
-          />
-        </div>
-        <div>
-        <img
-          src="https://picsum.photos/350"
-          class="rounded img-thumbnail"
-          alt="placeholder"
-        />
-        <img
-          src="https://picsum.photos/350"
-          class="rounded img-thumbnail"
-          alt="placeholder"
-        />
-        </div>
-        <div>
-          <img
-            src="https://picsum.photos/350"
-            class="rounded img-thumbnail"
-            alt="placeholder"
-          />
-          <img
-            src="https://picsum.photos/350"
-            class="rounded img-thumbnail"
-            alt="placeholder"
-          />
+        <div class="text-center">
+          <div class="my-3">
+            <img
+              src="https://picsum.photos/350"
+              class="rounded img-thumbnail mx-3"
+              alt="placeholder"
+            />
+            <img
+              src="https://picsum.photos/350"
+              class="rounded img-thumbnail mx-3"
+              alt="placeholder"
+            />
+          </div>
+          <div class="my-3">
+            <img
+              src="https://picsum.photos/350"
+              class="rounded img-thumbnail mx-3"
+              alt="placeholder"
+            />
+            <img
+              src="https://picsum.photos/350"
+              class="rounded img-thumbnail mx-3"
+              alt="placeholder"
+            />
+          </div>
+          <div class="my-3">
+            <img
+              src="https://picsum.photos/350"
+              class="rounded img-thumbnail mx-3"
+              alt="placeholder"
+            />
+            <img
+              src="https://picsum.photos/350"
+              class="rounded img-thumbnail mx-3"
+              alt="placeholder"
+            />
+          </div>
         </div>
       </div>
     </main>
