--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   >
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Lindy E. Merwin</a>
+        <a class="navbar-brand" href="./index.html">Lindy E. Merwin</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -107,7 +107,7 @@
     <footer class="fixed-bottom">
       <div class="bg-info" style="height: 10px;"></div>
       <div class="bg-dark text-center text-light p-3">
-        © Copyright
+        © Copyright 2020 Lindy Merwin
       </div>
     </footer>
   </body>
