--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
   >
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Lindy E. Merwin</a>
+        <a class="navbar-brand" href="./index.html">Lindy E. Merwin</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -44,13 +44,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="./contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Portfolio</a>
+              <a class="nav-link active" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="./index.html">About</a>
             </li>
           </ul>
         </div>
@@ -105,7 +105,7 @@
     <footer class="fixed-bottom">
       <div class="bg-info" style="height: 10px;"></div>
       <div class="bg-dark text-center text-light p-3">
-        © Copyright
+        © Copyright 2020 Lindy Merwin
       </div>
     </footer>
   </body>
