--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     "
   >
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="./index.html">Lindy E. Merwin</a>
         <button
           class="navbar-toggler"
@@ -58,7 +58,7 @@
     </header>
 
     <main class="container">
-      <div class="card-body bg-white mt-3 mb-5">
+      <div class="card-body bg-white mt-4 mb-5">
         <h2 class="text-info mt-3">About Me!</h2>
         <hr />
         <img
