--- a/portfolio.html
+++ b/portfolio.html
@@ -59,45 +59,35 @@
 
     <main class="container">
       <div class="card-body bg-white mt-4 mb-5">
+        <div class="row">
+          <div class="col-md">
         <h2 class="text-info mt-3">Portfolio</h2>
-        <hr />
-        <div class="text-center">
-          <div class="my-3">
-            <img
-              src="https://picsum.photos/350"
-              class="rounded img-thumbnail mx-3"
-              alt="placeholder"
-            />
-            <img
-              src="https://picsum.photos/350"
-              class="rounded img-thumbnail mx-3"
-              alt="placeholder"
-            />
           </div>
-          <div class="my-3">
-            <img
-              src="https://picsum.photos/350"
-              class="rounded img-thumbnail mx-3"
-              alt="placeholder"
-            />
-            <img
-              src="https://picsum.photos/350"
-              class="rounded img-thumbnail mx-3"
-              alt="placeholder"
-            />
-          </div>
-          <div class="my-3">
-            <img
-              src="https://picsum.photos/350"
-              class="rounded img-thumbnail mx-3"
-              alt="placeholder"
-            />
-            <img
-              src="https://picsum.photos/350"
-              class="rounded img-thumbnail mx-3"
-              alt="placeholder"
-            />
-          </div>
+        </div>
+        <div class="row">
+        <div class="col-md-2 mt-4">
+          <img src="https://via.placeholder.com/200" >
+        </div>
+        <div class="col-md-2 mt-4">
+          <img src="https://via.placeholder.com/200" >
+        </div>
+      </div>
+          <div class="row">
+        <div class="col-md-2 mt-4">
+          <img src="https://via.placeholder.com/200" >
+        </div>
+        <div class="col-md-2 mt-4">
+          <img src="https://via.placeholder.com/200" >
+        </div>
+      </div>
+       <div class="row">
+        <div class="col-md-2 mt-4">
+          <img src="https://via.placeholder.com/200" >
+        </div>
+        <div class="col-md-2 mt-4">
+          <img src="https://via.placeholder.com/200" >
+        </div>
+      </div>
         </div>
       </div>
     </main>
