--- a/portfolio.html
+++ b/portfolio.html
@@ -61,33 +61,32 @@
       <div class="card-body bg-white mt-4 mb-5">
         <div class="row">
           <div class="col-md">
-        <h2 class="text-info mt-3">Portfolio</h2>
+            <h2 class="text-info mt-3">Portfolio</h2>
           </div>
         </div>
-        <div class="row">
-        <div class="col-md-2 mt-4">
-          <img src="https://via.placeholder.com/200" >
+        <div class="row text-center">
+          <div class="col-lg-6 mt-4">
+            <img src="https://via.placeholder.com/350" />
+          </div>
+          <div class="col-lg-6 mt-4">
+            <img src="https://via.placeholder.com/350" />
+          </div>
         </div>
-        <div class="col-md-2 mt-4">
-          <img src="https://via.placeholder.com/200" >
+        <div class="row text-center">
+          <div class="col-lg-6 mt-4">
+            <img src="https://via.placeholder.com/350" />
+          </div>
+          <div class="col-lg-6 mt-4">
+            <img src="https://via.placeholder.com/350" />
+          </div>
         </div>
-      </div>
-          <div class="row">
-        <div class="col-md-2 mt-4">
-          <img src="https://via.placeholder.com/200" >
-        </div>
-        <div class="col-md-2 mt-4">
-          <img src="https://via.placeholder.com/200" >
-        </div>
-      </div>
-       <div class="row">
-        <div class="col-md-2 mt-4">
-          <img src="https://via.placeholder.com/200" >
-        </div>
-        <div class="col-md-2 mt-4">
-          <img src="https://via.placeholder.com/200" >
-        </div>
-      </div>
+        <div class="row text-center">
+          <div class="col-lg-6 mt-4">
+            <img src="https://via.placeholder.com/350" />
+          </div>
+          <div class="col-lg-6 mt-4">
+            <img src="https://via.placeholder.com/350" />
+          </div>
         </div>
       </div>
     </main>
