--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
     </header>
 
     <main class="container">
-      <div class="card-body bg-white mt-4 mb-5">
+      <div class="card-body bg-white mb-5" style="margin-top:100px">
         <h2 class="text-info mt-3">Contact</h2>
         <hr />
         <form>
