--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
     </header>
 
     <main class="container">
-      <div class="card-body bg-white mt-4 mb-5">
+      <div class="card-body bg-white mb-5" style="margin-top: 100px;">
         <div class="row">
           <div class="col-md">
             <h2 class="text-info mt-3">Portfolio</h2>
