--- a/index.html
+++ b/index.html
@@ -61,46 +61,48 @@
       <div class="card-body bg-white mb-5" style="margin-top: 100px;">
         <h2 class="text-info mt-3">About Me!</h2>
         <hr />
-        <img
-          src="img/pic3.png"
-          class="float-left p-3"
-          alt="Profile Pic"
-          width="300"
-        />
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis fuga
-          optio fugiat provident sequi suscipit, pariatur ad molestias
-          voluptatum accusamus, voluptas repudiandae! Laborum in amet minus
-          nostrum, tenetur numquam reiciendis. Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Facere ipsum dolorem ea repellendus
-          debitis quidem, odio minima numquam, eveniet, quibusdam vitae amet
-          cumque quam et rerum expedita libero sit vero? Lorem ipsum, dolor sit
-          amet consectetur adipisicing elit. Rem eius, totam quae sunt illo
-          corporis facere vitae distinctio officia non doloremque unde natus
-          nisi amet nesciunt obcaecati? Optio, corporis culpa.
-        </p>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-          obcaecati velit repudiandae consequatur quod cumque quae ratione
-          quidem placeat praesentium inventore exercitationem itaque magni quis
-          dicta ex repellendus, ducimus omnis. Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Quibusdam blanditiis laboriosam error
-          nostrum quia cumque nulla fugiat expedita aspernatur veritatis!
-          Eveniet qui error quis magnam, quos minus ipsum! Accusamus,
-          voluptates.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id eos,
-          libero quas aperiam, officia deserunt laborum eum quis explicabo
-          placeat ad asperiores ab temporibus? Dicta tempore accusamus voluptas
-          eveniet minus.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id eos,
-          libero quas aperiam, officia deserunt laborum eum quis explicabo
-          placeat ad asperiores ab temporibus? Dicta tempore accusamus voluptas
-          eveniet minus.
-        </p>
+        <div class="row">
+          <img
+            src="img/pic3.png"
+            class="float-left p-3"
+            alt="Profile Pic"
+            width="300"
+          />
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
+            fuga optio fugiat provident sequi suscipit, pariatur ad molestias
+            voluptatum accusamus, voluptas repudiandae! Laborum in amet minus
+            nostrum, tenetur numquam reiciendis. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Facere ipsum dolorem ea repellendus
+            debitis quidem, odio minima numquam, eveniet, quibusdam vitae amet
+            cumque quam et rerum expedita libero sit vero? Lorem ipsum, dolor
+            sit amet consectetur adipisicing elit. Rem eius, totam quae sunt
+            illo corporis facere vitae distinctio officia non doloremque unde
+            natus nisi amet nesciunt obcaecati? Optio, corporis culpa.
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+            obcaecati velit repudiandae consequatur quod cumque quae ratione
+            quidem placeat praesentium inventore exercitationem itaque magni
+            quis dicta ex repellendus, ducimus omnis. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Quibusdam blanditiis laboriosam error
+            nostrum quia cumque nulla fugiat expedita aspernatur veritatis!
+            Eveniet qui error quis magnam, quos minus ipsum! Accusamus,
+            voluptates.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id eos,
+            libero quas aperiam, officia deserunt laborum eum quis explicabo
+            placeat ad asperiores ab temporibus? Dicta tempore accusamus
+            voluptas eveniet minus.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id eos,
+            libero quas aperiam, officia deserunt laborum eum quis explicabo
+            placeat ad asperiores ab temporibus? Dicta tempore accusamus
+            voluptas eveniet minus.
+          </p>
+        </div>
       </div>
     </main>
 
