Formatting About Page

--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@
         <h2 class="text-info mt-3">About Me!</h2>
         <hr />
         <div class="row">
-          <img
-            src="img/pic3.png"
-            class="float-left p-3"
-            alt="Profile Pic"
-            width="300"
-          />
-          <p>
+          <div class="col-lg-4">
+            <img
+              class="img-fluid"
+              src="img/pic3.png"
+              class="float-left p-3"
+              alt="Profile Pic"
+              width="100%"
+            />
+          </div>
+          <div class="col-lg-8">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
             fuga optio fugiat provident sequi suscipit, pariatur ad molestias
             voluptatum accusamus, voluptas repudiandae! Laborum in amet minus
@@ -78,30 +81,37 @@
             cumque quam et rerum expedita libero sit vero? Lorem ipsum, dolor
             sit amet consectetur adipisicing elit. Rem eius, totam quae sunt
             illo corporis facere vitae distinctio officia non doloremque unde
+            natus nisi amet nesciunt obcaecati? Optio, corporis culpa. Lorem
+            ipsum dolor, sit amet consectetur adipisicing elit. Facilis fuga
+            optio fugiat provident sequi suscipit, pariatur ad molestias
+            voluptatum accusamus, voluptas repudiandae! Laborum in amet minus
+            nostrum, tenetur numquam reiciendis. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Facere ipsum dolorem ea repellendus
+            debitis quidem, odio minima numquam, eveniet, quibusdam vitae amet
+            cumque quam et rerum expedita libero sit vero? Lorem ipsum, dolor
+            sit amet consectetur adipisicing elit. Rem eius, totam quae sunt
+            illo corporis facere vitae distinctio officia non doloremque unde
             natus nisi amet nesciunt obcaecati? Optio, corporis culpa.
-          </p>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-            obcaecati velit repudiandae consequatur quod cumque quae ratione
-            quidem placeat praesentium inventore exercitationem itaque magni
-            quis dicta ex repellendus, ducimus omnis. Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Quibusdam blanditiis laboriosam error
-            nostrum quia cumque nulla fugiat expedita aspernatur veritatis!
-            Eveniet qui error quis magnam, quos minus ipsum! Accusamus,
-            voluptates.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id eos,
-            libero quas aperiam, officia deserunt laborum eum quis explicabo
-            placeat ad asperiores ab temporibus? Dicta tempore accusamus
-            voluptas eveniet minus.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id eos,
-            libero quas aperiam, officia deserunt laborum eum quis explicabo
-            placeat ad asperiores ab temporibus? Dicta tempore accusamus
-            voluptas eveniet minus.
-          </p>
+          </div>
+          <div class="row">
+            <div class="col-lg-12">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Excepturi obcaecati velit repudiandae consequatur quod cumque quae
+              ratione quidem placeat praesentium inventore exercitationem itaque
+              magni quis dicta ex repellendus, ducimus omnis. Lorem ipsum dolor
+              sit amet consectetur adipisicing elit. Quibusdam blanditiis
+              laboriosam error nostrum quia cumque nulla fugiat expedita
+              aspernatur veritatis! Eveniet qui error quis magnam, quos minus
+              ipsum! Accusamus, voluptates. Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Id eos, libero quas aperiam, officia
+              deserunt laborum eum quis explicabo placeat ad asperiores ab
+              temporibus? Dicta tempore accusamus voluptas eveniet minus. Lorem
+              ipsum dolor sit amet, consectetur adipisicing elit. Id eos, libero
+              quas aperiam, officia deserunt laborum eum quis explicabo placeat
+              ad asperiores ab temporibus? Dicta tempore accusamus voluptas
+              eveniet minus.
+            </div>
+          </div>
         </div>
       </div>
     </main>
