--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
         <div class="row">
           <div class="col-lg-4">
             <img
-              class="img-fluid"
               src="img/pic3.png"
-              class="float-left p-3"
+              class="p-3"
               alt="Profile Pic"
               width="100%"
             />
