--- a/portfolio.html
+++ b/portfolio.html
@@ -66,10 +66,20 @@
         </div>
         <div class="row text-center">
           <div class="col-lg-6 mt-4">
-            <img src="https://via.placeholder.com/350" />
+            <div>
+              <div style="position: relative; z-index: 1;">
+                <img src="https://via.placeholder.com/350" style="position: absolute; z-index: 2;" />
+                <span id="overlay_text" style="position: relative; top: -10px; z-index: 3;">OVERLAY</span>
+              </div>
+            </div>
           </div>
           <div class="col-lg-6 mt-4">
-            <img src="https://via.placeholder.com/350" />
+            <div style=>
+              <div style="position: relative; z-index: 1;">
+                <img src="https://via.placeholder.com/350" style="position: absolute; z-index: 2;" />
+                <span id="overlay_text" style="position: relative; top: -10px; z-index: 3;">OVERLAY</span>
+              </div>
+            </div>
           </div>
         </div>
         <div class="row text-center">
