--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
 
     <main class="container">
-      <div class="card-body bg-white mb-5" style="margin-top: 100px;">
+      <div class="card-body bg-white" style="margin-top: 100px; margin-bottom: 100px;">
         <h2 class="text-info mt-3">About Me!</h2>
         <hr />
         <div class="row">
