--- a/portfolio.html
+++ b/portfolio.html
@@ -58,40 +58,73 @@
     </header>
 
     <main class="container">
-      <div class="card-body bg-white" style="margin-top: 100px; margin-bottom: 100px;">
+      <div
+        class="card-body bg-white"
+        style="margin-top: 100px; margin-bottom: 100px;"
+      >
         <div class="row">
           <div class="col-md">
             <h2 class="text-info mt-3">Portfolio</h2>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-6 mt-4 text-center">
-              <img src="https://via.placeholder.com/350" />
-              <div class="bg-info" style="width: 350px; position: absolute; top: 278px; left: 100px;">OVERLAY</div>
+        <div class="row text-center">
+          <div class="col-lg-6 mt-4">
+            <img src="https://via.placeholder.com/350" />
+            <div
+              class="bg-info mx-auto"
+              style="width: 350px; position: relative; top: -50px;"
+            >
+              OVERLAY
+            </div>
           </div>
           <div class="col-lg-6 mt-4 text-center">
-              <img src="https://via.placeholder.com/350" />
-              <div class="bg-info" style="width: 350px; position: absolute; top: 278px; left: 100px;">OVERLAY</div>
+            <img src="https://via.placeholder.com/350" />
+            <div
+              class="bg-info mx-auto"
+              style="width: 350px; position: relative; top: -50px;"
+            >
+              OVERLAY
+            </div>
           </div>
         </div>
         <div class="row text-center">
           <div class="col-lg-6 mt-4">
             <img src="https://via.placeholder.com/350" />
-            <div class="bg-info" style="width: 350px; position: absolute; top: 278px; left: 100px;">OVERLAY</div>
+            <div
+              class="bg-info mx-auto"
+              style="width: 350px; position: relative; top: -50px;"
+            >
+              OVERLAY
+            </div>
           </div>
           <div class="col-lg-6 mt-4">
             <img src="https://via.placeholder.com/350" />
-            <div class="bg-info" style="width: 350px; position: absolute; top: 278px; left: 100px;">OVERLAY</div>
+            <div
+              class="bg-info mx-auto"
+              style="width: 350px; position: relative; top: -50px;"
+            >
+              OVERLAY
+            </div>
           </div>
         </div>
         <div class="row text-center">
           <div class="col-lg-6 mt-4">
             <img src="https://via.placeholder.com/350" />
-            <div class="bg-info" style="width: 350px; position: absolute; top: 278px; left: 100px;">OVERLAY</div>
+            <div
+              class="bg-info mx-auto"
+              style="width: 350px; position: relative; top: -50px;"
+            >
+              OVERLAY
+            </div>
           </div>
           <div class="col-lg-6 mt-4">
             <img src="https://via.placeholder.com/350" />
-            <div class="bg-info" style="width: 350px; position: absolute; top: 278px; left: 100px;">OVERLAY</div>
+            <div
+              class="bg-info mx-auto"
+              style="width: 350px; position: relative; top: -50px;"
+            >
+              OVERLAY
+            </div>
           </div>
         </div>
       </div>
