--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
     </header>
 
     <main class="container">
-      <div class="card-body bg-white" style="margin-top: 100px; margin-bottom: 100px;">
+      <div
+        class="card-body bg-white"
+        style="margin-top: 100px; margin-bottom: 100px;"
+      >
         <h2 class="text-info mt-3">About Me!</h2>
         <hr />
         <div class="row">
@@ -71,44 +74,53 @@
             />
           </div>
           <div class="col-lg-8">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-            fuga optio fugiat provident sequi suscipit, pariatur ad molestias
-            voluptatum accusamus, voluptas repudiandae! Laborum in amet minus
-            nostrum, tenetur numquam reiciendis. Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Facere ipsum dolorem ea repellendus
-            debitis quidem, odio minima numquam, eveniet, quibusdam vitae amet
-            cumque quam et rerum expedita libero sit vero? Lorem ipsum, dolor
-            sit amet consectetur adipisicing elit. Rem eius, totam quae sunt
-            illo corporis facere vitae distinctio officia non doloremque unde
-            natus nisi amet nesciunt obcaecati? Optio, corporis culpa. Lorem
-            ipsum dolor, sit amet consectetur adipisicing elit. Facilis fuga
-            optio fugiat provident sequi suscipit, pariatur ad molestias
-            voluptatum accusamus, voluptas repudiandae! Laborum in amet minus
-            nostrum, tenetur numquam reiciendis. Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Facere ipsum dolorem ea repellendus
-            debitis quidem, odio minima numquam, eveniet, quibusdam vitae amet
-            cumque quam et rerum expedita libero sit vero? Lorem ipsum, dolor
-            sit amet consectetur adipisicing elit. Rem eius, totam quae sunt
-            illo corporis facere vitae distinctio officia non doloremque unde
-            natus nisi amet nesciunt obcaecati? Optio, corporis culpa.
+            <p>
+              I am an educator and developer from the midwest. I called Mexico
+              home for 10 years and have recently made the transition to San
+              Diego. My journey into tech started through my years in education.
+              The future comes quickly and it was important to me to have the
+              skills and tools to keep up. I love helping students inside the
+              classroom and wanted to be able to help outside the classroom as
+              well. Moving forward I want to combine my love of education with
+              my new love of front-end development and instructional design. As
+              a bilingual educator, English and Spanish, and my background in
+              curriculum development, educational philosophy and project
+              management skills, I hope to keep building bridges and creating
+              content in my community through web design and e-learning
+              experiences.
+            </p>
+            <p>
+              My focus is on creating clean & user friendly experiences. Using
+              HTML/CSS & Javascript I make responsive webpages writing in easy
+              to read code. Do you have the idea for your dream site? You can
+              trust me to make your idea come to life identical to your
+              designer's PSD. Let's make things together! Check out my projects
+              in the menu below or head over to my Github!
+            </p>
           </div>
+
           <div class="row">
             <div class="col-lg-12">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Excepturi obcaecati velit repudiandae consequatur quod cumque quae
-              ratione quidem placeat praesentium inventore exercitationem itaque
-              magni quis dicta ex repellendus, ducimus omnis. Lorem ipsum dolor
-              sit amet consectetur adipisicing elit. Quibusdam blanditiis
-              laboriosam error nostrum quia cumque nulla fugiat expedita
-              aspernatur veritatis! Eveniet qui error quis magnam, quos minus
-              ipsum! Accusamus, voluptates. Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Id eos, libero quas aperiam, officia
-              deserunt laborum eum quis explicabo placeat ad asperiores ab
-              temporibus? Dicta tempore accusamus voluptas eveniet minus. Lorem
-              ipsum dolor sit amet, consectetur adipisicing elit. Id eos, libero
-              quas aperiam, officia deserunt laborum eum quis explicabo placeat
-              ad asperiores ab temporibus? Dicta tempore accusamus voluptas
-              eveniet minus.
+              <p>
+                I have a solid foundation as an effective bilingual communicator
+                (English/Spanish), trainer and teacher, with an ability to
+                transfer such leadership skills to a variety of organizational
+                structures. As a teacher of over 10 years I am effective in
+                assessing and analyzing data and changing instruction based on
+                findings in order to create a more efficient and successful
+                approach to solving problems. I use Adobe Captivate to make
+                e-learning content and would love to work with your team to
+                create successful approaches to solving problems.
+              </p>
+              <p>
+                <ul class="list-group mx-auto" style="width: 200px;">
+                  <li class="list-group-item disabled" aria-disabled="true">Contact Me!</li>
+                  <li class="list-group-item"><a href="https://github.com/lindyem">Github</a></li>
+                  <li class="list-group-item"><a href = "mailto: lindy.merwin@gmail.com">Email me!</a></li>
+                  
+                  </ul>
+              </p>
+              
             </div>
           </div>
         </div>
